--- a/FL2023-Assignment1-orosalesalfaroalfaro/wwwroot/styles.css
+++ b/FL2023-Assignment1-orosalesalfaroalfaro/wwwroot/styles.css
@@ -1,12 +1,15 @@
 ﻿body {
+    background-color: #333;
+    color: #fff;
     font-family: Arial, sans-serif;
 }
 
-/*Centering the content*/
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#Title {
+    font-size: 3em;
+    margin-bottom: 20px
 }
